# open-egoscale

./: .gitignore  .gitmodules  spec_v2.md
egoscale_research/: README.md  pyproject.toml
egoscale_research/configs/: data.yaml  model.yaml  stage1.yaml  stage1_fullparam_8x4090.yaml  stage1_qwen_2gpu_online.yaml  stage1_qwen_smoke.yaml  stage1_smolvlm_2p2b_smoke.yaml  stage1_smolvlm_500m_bs16_smoke.yaml  stage1_smolvlm_500m_bs32_smoke.yaml  stage1_smolvlm_500m_bs4_smoke.yaml  stage1_smolvlm_500m_bs8_smoke.yaml  stage1_smolvlm_500m_fullparam_bs128_smoke.yaml  stage1_smolvlm_500m_fullparam_bs16_smoke.yaml  stage1_smolvlm_500m_fullparam_bs24_smoke.yaml  stage1_smolvlm_500m_fullparam_bs256_smoke.yaml  stage1_smolvlm_500m_fullparam_bs32_smoke.yaml  stage1_smolvlm_500m_fullparam_bs40_smoke.yaml  stage1_smolvlm_500m_fullparam_bs48_smoke.yaml  stage1_smolvlm_500m_fullparam_bs64_smoke.yaml  stage1_smolvlm_500m_fullparam_bs72_smoke.yaml  stage1_smolvlm_500m_fullparam_bs76_smoke.yaml  stage1_smolvlm_500m_fullparam_bs78_smoke.yaml  stage1_smolvlm_500m_fullparam_bs80_smoke.yaml  stage1_smolvlm_500m_fullparam_bs88_smoke.yaml  stage1_smolvlm_500m_fullparam_bs8_smoke.yaml  stage1_smolvlm_500m_fullparam_bs92_smoke.yaml  stage1_smolvlm_500m_fullparam_bs96_smoke.yaml  stage1_smolvlm_500m_fullparam_subset1024_wandb.yaml  stage1_smolvlm_500m_mini_wandb.yaml  stage1_smolvlm_500m_smoke.yaml  stage1_smolvlm_500m_subset1024_wandb.yaml  stage2.yaml  stage3.yaml
egoscale_research/scripts/: convert_egodex_stage1.py  eval_open_loop.py  inspect_batch.py  prepare_synth_data.py  train_stage1.py  (+2 more)
(+34 files in other folders)
